<resources>
    <string name="app_name">DietManagement</string>
    <string name="welcome_label">iDiet</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sa</string>
    <string name="sunday">Su</string>
    <string name="monday_context">Monday</string>
    <string name="tuesday_context">Tuesday</string>
    <string name="wednesday_context">Wednesday</string>
    <string name="thursday_context">Thursday</string>
    <string name="friday_context">Friday</string>
    <string name="saturday_context">Saturday</string>
    <string name="sunday_context">Sunday</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="login_title">Welcome to iDiet</string>
    <string name="user_input_hint">Enter Username</string>
    <string name="pass_input_hint">Enter Password</string>
    <string name="email_input_hint">Enter Email</string>
    <string name="fullname_input_hint">Enter Your Full Name</string>
    <string name="register">Register</string>
    <string name="current_user">User</string>
    <string name="email">Email</string>
    <string name="fullname">Full name</string>
    <string name="meal">Type your meal</string>
    <string name="time">Type meal time</string>
    <string name="submit">Submit</string>
    <string name="day">Day</string>
    <string name="title_activity_day">DayActivity</string>
    <string name="loadlist">Load List</string>
</resources>