<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_green">

    <TextView
        android:id="@+id/day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/day" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/time"
            android:hint="@string/time"
            android:inputType="time" />

        <EditText
            android:id="@+id/input_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/meal"
            android:hint="@string/meal"
            android:inputType="textAutoCorrect|textCapSentences" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/submit_food_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:background="@color/white"
            android:textColor="@color/background_green"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/load_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loadlist"
            android:background="@color/white"
            android:textColor="@color/background_green"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <ListView
        android:id="@+id/list_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>