<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints="@string/user_input_hint"
    android:background="@color/background_green"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="245dp"
        android:layout_marginTop="4dp"
        android:paddingVertical="45dp"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/login_pass_input"
        android:drawableEnd="@drawable/ic_password"
        android:layout_width="314dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/pass_input_hint"
        android:ems="10"
        android:hint="@string/pass_input_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPass" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="181dp"
        android:layout_height="74dp"
        android:layout_marginTop="92dp"
        android:text="@string/login_btn_text"
        android:textColor="@color/background_green"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_pass_input"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/login_user_input"
        android:drawableEnd="@drawable/ic_username"
        android:layout_width="314dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:autofillHints="@string/user_input_hint"
        android:ems="10"
        android:hint="@string/user_input_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/login_pass_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUser"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/wrong_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:textColor="#FD0000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_pass_input" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="No account?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.678"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_pass_input" />

    <TextView
        android:id="@+id/register"
        android:layout_width="73dp"
        android:layout_height="23dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:text="@string/register"
        android:textAlignment="viewEnd"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_pass_input" />
</androidx.constraintlayout.widget.ConstraintLayout>